--- a/Trabalho Avaliativo 1/Trabalho_Avaliativo_1_Kaio_Rodrigues.ipynb
+++ b/Trabalho Avaliativo 1/Trabalho_Avaliativo_1_Kaio_Rodrigues.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "source": [
     "# Trabalho Avaliativo 1\n",
-    "### Aluno: Kaio Rodrigues da Cunha \n",
-    "### Matrícula: 1394485"
+    "### Aluno: Kaio Rodrigues \n",
    ]
   },
   {
