--- a/Trabalho Avaliativo 1/Trabalho_Avaliativo_1_Kaio_Rodrigues.ipynb
+++ b/Trabalho Avaliativo 1/Trabalho_Avaliativo_1_Kaio_Rodrigues.ipynb
@@ -517,7 +517,7 @@
    "id": "11f683dd",
    "metadata": {},
    "source": [
-    "## Item f\n",
+    "## Item F\n",
     "\n",
     "Vemos que as médias das duas redes são iguais, porém \n",
     "\n",
